--- a/apps/base/templates/components/sidebar.html
+++ b/apps/base/templates/components/sidebar.html
@@ -1,24 +1,27 @@
 {% load static %} <!-- Carrega as tags estáticas -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">    
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 <div class="sidebar">
     <div class="sidebar-header">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css">
+
         <img src="{% static 'image/logobranco.png' %}" alt="Logo" class="img-fluid">
     </div>
     <hr>
     <p class="welcome-text">Bem-Vindo, colega!</p>
     <nav class="nav flex-column">
-        <a href="/home" class="nav-link nav-link-beat">
-            <i class="fas fa-home me-2 fa-lg" style="color: #FFFFFF;"></i>
+        <a href="/home" class="nav-link nav-link-beat {% if request.path == '/home/' %}active{% endif %}">
+            <i class="fas fa-home me-2 fa-lg" style="color: #FFFFFF;font-size:25px;"></i>
             <span class="sidebar-info">Home</span>
         </a>
-        <a href="/unicred" class="nav-link nav-link-beat">
-            <i class="fa-solid fa-map-location-dot fa-lg" style="color: #FFFFFF;"></i>
-            <span class="sidebar-info">unicred</span>
+        <a href="/unicred" class="nav-link nav-link-beat {% if request.path == '/unicred/' %}active{% endif %}">
+            <i class="bi bi-stack-overflow" style="color: #FFFFFF;font-size:25px;"></i>
+            <span class="sidebar-info">Unicred</span>
         </a>
-        <a href="/avarias" class="nav-link nav-link-beat">
-            <i class="fa-solid fa-map-location-dot fa-lg" style="color: #FFFFFF;"></i>
-            <span class="sidebar-info">Avarias</span>
+        <a href="/faturamento" class="nav-link nav-link-beat {% if request.path == '/faturamento/' %}active{% endif %}">
+            <i class="bi bi-stack-overflow" style="color: #FFFFFF;font-size:25px;"></i>
+            <span class="sidebar-info">Faturamento</span>
         </a>
         <!-- Adicione mais links conforme necessário -->
     </nav>
