--- a/apps/base/templates/base.html
+++ b/apps/base/templates/base.html
@@ -14,10 +14,8 @@
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">    
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-	{% if request.path == '/home/'  %} 
-		{% include 'components/header.html' %} 
-	{% endif %} 
 
 </head>
 
@@ -27,6 +25,10 @@
 
  
 
+	{% if request.path == '/home/'  %} 
+		{% include 'components/header.html' %} 
+	{% endif %} 
+    
     {% include 'components/navbar.html' %} 
     {% include 'components/message.html' %} 
     {% include 'components/logout.html' %}
@@ -40,7 +42,11 @@
 		{% include 'components/sidebar.html' %} 
 	{% endif %} 
 
-    {% if request.path == '/home' %}
+    {% if request.path == '/faturamento/home/'  %}
+    {% include 'components/footer.html' %} 
+    {% endif %} 
+    
+    {% if request.path == '/home/'  %}
     {% include 'components/footer.html' %} 
     {% endif %} 
 
