--- a/apps/pages/templates/santander.html
+++ b/apps/pages/templates/santander.html
@@ -61,7 +61,7 @@ td.codigo_movimento {
 
 <div class="container mt-5 p-4 rounded shadow" style="background-color: white;">
     <div class="text-center mb-4">
-        <img src="{% static 'image/santander.png' %}" alt="Consultar boleto Grafeno" class="img-fluid" style="max-width: 25%; height: auto; border-radius:10px;">
+        <img src="{% static 'image/santanderimagem.png' %}" alt="Consultar boleto Santander" class="img-fluid" style="max-width: 20j%; height: auto; border-radius:10px;">
     </div>
         <form method="GET" action="{% url 'santander_view' %}">
         <div class="form-group">
