--- a/apps/base/templates/components/sidebar.html
+++ b/apps/base/templates/components/sidebar.html
@@ -1,6 +1,7 @@
 {% load static %} <!-- Carrega as tags estáticas -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">    
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <div class="sidebar">
     <div class="sidebar-header">
@@ -9,10 +10,10 @@
         <img src="{% static 'image/logobranco.png' %}" alt="Logo" class="img-fluid">
 </div>
     <hr>
-    <p class="welcome-text">Bem-Vindo, colega!</p>
+    <p class="welcome-text">Bem-Vindo, {{user.first_name}}!</p>
     <nav class="nav flex-column">
         <a href="/home" class="nav-link nav-link-beat {% if request.path == '/home/' %}active{% endif %}">
-            <i class="fas fa-home me-2 fa-lg" style="color: #FFFFFF;font-size:25px;"></i>
+            <i class="fas fa-home me-2 fa-lg" style="color: #FFFFFF;font-size:30px;"></i>
             <span class="sidebar-info">Home</span>
         </a>
         <a href="/unicred" class="nav-link nav-link-beat {% if request.path == '/unicred/' %}active{% endif %}">
@@ -30,7 +31,19 @@
         <a href="/santander" class="nav-link nav-link-beat {% if request.path == '/santander/' %}active{% endif %}">
             <i class="bi bi-stack-overflow" style="color: #FFFFFF;font-size:25px;"></i>
             <span class="sidebar-info">Banco santander</span>
-        </a>                   
+        </a>   
+        <a href="/sofisa" class="nav-link nav-link-beat {% if request.path == '/sofisa/' %}active{% endif %}">
+            <i class="bi bi-stack-overflow" style="color: #FFFFFF;font-size:25px;"></i>
+            <span class="sidebar-info">Banco Sofisa</span>
+        </a>     
+        <a href="/safra" class="nav-link nav-link-beat {% if request.path == '/safra/' %}active{% endif %}">
+            <i class="bi bi-stack-overflow" style="color: #FFFFFF;font-size:25px;"></i>
+            <span class="sidebar-info">Banco Safra</span>
+        </a>            
+        <a href="/sicoob" class="nav-link nav-link-beat {% if request.path == '/sicoob/' %}active{% endif %}">
+            <i class="bi bi-stack-overflow" style="color: #FFFFFF;font-size:25px;"></i>
+            <span class="sidebar-info">Banco Sicoob</span>
+        </a>                       
         <a href="/faturamento" class="nav-link nav-link-beat {% if request.path == '/faturamento/' %}active{% endif %}">
             <i class="bi bi-stack-overflow" style="color: #FFFFFF;font-size:25px;"></i>
             <span class="sidebar-info">Faturamento</span>
